--- a/styles.css
+++ b/styles.css
@@ -36,3 +36,10 @@ a button {
    
     }
 
+  #date{
+    		width: 100%;
+    		height: 10%;
+    		background-color: green;
+    		position: absolute;
+    		bottom: 0%;
+    	}
