--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,7 @@ a button {
    
     }
 
+/*
   #date{
     		width: 100%;
     		height: 10%;
@@ -43,3 +44,5 @@ a button {
     		position: absolute;
     		bottom: 0%;
     	}
+
+*/
